# comfyui-global-filename-prefix

./: LICENSE  README.md  __init__.py  pyproject.toml
web/: settings.js
