[project]
name = "comfyui-global-filename-prefix"
version = "0.9.0"
description = "Adds configurable timestamp/workflow prefixes to ComfyUI output filenames globally."
license = {text = "MIT"}
authors = [
    {name = "DarkStarSword"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.comfy]
PublisherId = "darkstarsword"
DisplayName = "Global Filename Prefix"
Icon = ""
